fix z-index, started skills section

--- a/css/main.scss
+++ b/css/main.scss
@@ -65,7 +65,7 @@ p{
         }
         .menu-toggler{
           position: relative;
-          z-index: 2;
+          z-index: 101;
         }
       }
       
@@ -73,7 +73,7 @@ p{
         position: absolute;
         top: 0;
         right: -50vw;
-        z-index: 1;
+        z-index: 100;
         width: 50vw;
         height: 100vh;
         background: #f9f9f9;
@@ -182,6 +182,7 @@ p{
         position: absolute;
         left: 50%;
         top: 80%;
+        z-index: -10;
     
         a{
           i{
@@ -240,6 +241,7 @@ p{
           flex: 0 1 40%;
           
           .img-container{
+            z-index: -10;
             width: 100%;
             margin: 3em 0;
             display: flex;
